# sktime

./: .all-contributorsrc  .all-contributorsrc.orig  .appveyor.yml  .azure-pipelines.yml  .codecov.yml  .coveragerc  .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  0.1.20  1.2  =1.0.0  AGENTS.md  BUG_REPORT_DummyRegularAnomalies.md  CHANGELOG.md  CHANGELOG.rst  CITATION.cff  CNAME  CODEOWNERS  CODE_OF_CONDUCT.md  CODE_OF_CONDUCT.rst  CONTRIBUTING.md  CONTRIBUTING.rst  CONTRIBUTORS.md  Dockerfile  Dockerfile.pyfablearima  ESTIMATOR_OVERVIEW.md  EXECUTIVE_SUMMARY.md  FINAL_MAINTAINER_APPROVAL.md  FINAL_MAINTAINER_CHECKLIST.md  GOVERNANCE.md  GOVERNANCE.rst  ISSUE_1_DummyRegularAnomalies_empty_data.md  ISSUE_2_SubLOF_timedelta_RangeIndex.md  LICENSE  MAINTAINER_REVIEW.md  MANIFEST.in  (+112 more)
.binder/: Dockerfile  prelim_requirements.txt  requirements.txt  requirements.txt.orig
.circleci/: config.yml
.devcontainer/: devcontainer.json
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml  release-drafter.yml  release.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  doc_improvement.md  feature_request.md
.github/actions/: ci-macos.yml  ci-windows.yml  install.yml  test.yml  upload-to-pypi.yml
.github/schema/: schema_contributorsrc.json
.github/scripts/: anirban_debug_7622.py  check_contributors.py  link_checker.py  (+1 more)
ENV_DIR/: pyvenv.cfg
LLM based time-series Prediction/: README.md  agent.py  demo.ipynb  main.py  requirements.txt  utils.py
_contrib/: README.md  _plot_path.py  classification_examples.py  classification_experiments.py  clustering_experiments.py  data_io.py  distance_refactor.py  set_classifier.py  set_clusterer.py
_minimal_example/: script.py  test_notebook.ipynb  utils.py
build_tools/: changelog.py  check_backticks.py  check_backticks1.py  check_contributors.py  check_estimator.py  check_install_from_test_pypi.sh  fail_on_missing_init_files.sh  generate_contributors_board.py  hard_dependencies.txt  make_release.py  nb_json_formatter.py  requirements.txt  run_blogposts.sh  run_examples.sh
cluster/: _time_dbscan.py  _time_kmeans.py  clustering.ipynb  init.py  plotting.py
dev_sprint_2019/: sklearn_intro.ipynb  user_testing.ipynb
doc/: Makefile  api.rst  conf.py  index.rst  make.bat  quick_start.rst  user_guide.rst
docs/: Makefile  additional_requirements.txt  estimator_overview_table.md  make_estimator_overview_table.py  make_reduction.py  requirements.txt  symlink_examples.sh
documentation/: Makefile  symlink_examples.sh  update_documentation.sh  update_examples.sh
examples/: 00_datatypes.ipynb  00_datatypes_and_datasets.ipynb  00_sktime_intro.ipynb  01_agentic_forecasting.ipynb  01_forecasting.ipynb  01_forecasting.ipynb.orig  01_forecasting_hcrystalball.ipynb  01a_forecasting_sklearn.ipynb  01b_forecasting_proba.ipynb  01c_forecasting_hierarchical_global.ipynb  01d_forecasting_global_forecast.ipynb  01d_forecasting_unified_example.ipynb  02_classification.ipynb  02_classification_univariate.ipynb  02_model_comparison.ipynb  02a_classification_multivariate_cnn.ipynb  02b_classification_multivariate_lstmfcn.ipynb  02c_classification_multivariate_inceptiontime.ipynb  03_annotation.ipynb  03_classification_multivariate.ipynb  03_pipeline_and_tuning.ipynb  03_transformers.ipynb  03a_transformers_cheat_sheet.ipynb  03b_forecasting_transformers_pipelines_tuning.ipynb  04_benchmarking.ipynb  04_benchmarking_forecasters.ipynb  04_benchmarking_legacy.ipynb  04_benchmarking_new_framework.ipynb  04_benchmarking_simulation.ipynb  04_benchmarking_v2.ipynb  04_classifier_benchmarking.ipynb  04_m4_competition.ipynb  04_pipeline_and_tuning.ipynb  05_VAR.ipynb  05_VARReduce.ipynb  05_graphical_pipelines.ipynb  05_transformers.ipynb  06_distances_kernels_alignment.ipynb  07_detection_anomaly_changepoints.ipynb  AA_datatypes_and_datasets.ipynb  (+88 more)
extension_templates/: _dataset_template.py  alignment.py  annotation.py  catalogue.py  classification.py  clustering.py  deep_learning_classifier.py  deep_learning_network.py  detection.py  dist_kern_panel.py  dist_kern_tab.py  distance.py  early_classification.py  forecasting.py  forecasting_global_supersimple.py  forecasting_simple.py  forecasting_supersimple.py  metric_detection.py  metric_forecasting.py  metric_forecasting_hierarchical.py  param_est.py  regression.py  split.py  transformer.py  transformer_simple.py  transformer_supersimple.py  transformer_supersimple_features.py
forecasting/: causal_var.py
integration_tests/: test_estimators_conform.py
local/: bench.py  euclidean_dtw_knn_comparisons.ipynb
maint_tools/: check_install_from_test_pypi.sh  check_test_pypi_install.sh  linting.sh  make_release.py  requirements.txt  run_all_examples.sh
scratchpad/: Parallel programming.ipynb  heavy_interface_skeleton.ipynb
skltemplate/: __init__.py  _template.py
sktime/: .all-contributorsrc  .readthedocs.yml  CONTRIBUTING.md  CONTRIBUTORS.md  __init__.py  _classifiers.py  _nopytest_tests.py  _regressors.py  base.py  blah.py  check_parity.py  classifiers.py  conftest.py  datasets.py  demo.ipynb  exceptions.py  highlevel.py  load_data.py  model_selection.py  pipeline.py  regressors.py  run_tsforest.py  setup.py  transformers.py  ts_forest.py  tsdecisiontree.py  tsforest.py  verify_cnn_pytorch.py
sktime-env/: pyvenv.cfg
tests/: test__bagging.py  test__chamfer.py  test__dummy_regular_an.py  test__isinstance.py  test__mae.py  test__optimal.py  test_dilation_mapping.py  test_pipelines.py  test_transformers.py
venv-sktime/: pyvenv.cfg
wishlist/: NOT_IMPLEMENTED_EVIDENCE.md  README.md  aligner.md  catalogue.md  classifier.md  clusterer.md  dataset.md  dataset_classification.md  dataset_forecasting.md  dataset_regression.md  detection.md  detector.md  dist_kernel.md  early_classifier.md  forecaster.md  global_forecaster.md  metric.md  metric_detection.md  metric_forecasting.md  metric_forecasting_proba.md  network.md  param_est.md  reconciler.md  regressor.md  splitter.md  transformer-pairwise-panel.md  transformer-pairwise.md  transformer.md
(+5870 files in other folders)
